--- a/VisualStudio/SimpleTimeoutServer/SimpleTimeoutServer.vcxproj
+++ b/VisualStudio/SimpleTimeoutServer/SimpleTimeoutServer.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="SimpleTimeoutServer.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Server.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
